--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>2025 Men's NCAA Bracket Picker</title>
+  <title>2025 NCAA Logo Bracket Picker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -70,7 +70,7 @@
   </style>
 </head>
 <body>
-  <h1>2025 Men's NCAA Bracket Picker</h1>
+  <h1>2025 NCAA Logo Bracket Picker</h1>
 
   <!-- Bracket Regions -->
   <div class="bracket-container">
